[package]
name = "plonk-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
ff = "0.12.0"
group = "0.12.0"
lazy_static = "1.4.0"
hex = "0.4.3"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
rand_chacha = "0.3.1"

# halo2
halo2_wrong = { git = "https://github.com/lazovicff/halo2wrong", package = "halo2wrong" }
halo2_wrong_ecc = { git = "https://github.com/lazovicff/halo2wrong", package = "ecc" }
halo2_wrong_maingate = { git = "https://github.com/lazovicff/halo2wrong", package = "maingate" }
halo2_wrong_transcript = { git = "https://github.com/lazovicff/halo2wrong", package = "transcript" }
poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon", branch = "padding" }

